--- a/games/monkey/assets/01.yaml
+++ b/games/monkey/assets/01.yaml
@@ -104,22 +104,22 @@ lookout:
   type: 'asset.sprite'
   animations:
     idle_e:
-      frames:
-        - [[170,457,20,37,11,0],[173,495,11,13,4,-32]]
+      elements:
+        - quads: [[170,457,20,37,11,0],[173,495,11,13,4,-32]]
     idle_s:
-      frames:
-        - [[193,459,23,35,11,0],[186,495,9,14,5,-32]]
+      elements:
+        - quads: [[193,459,23,35,11,0],[186,495,9,14,5,-32]]
     talk_e:
-      frames:
-        - [[170,457,20,37,11,0],[173,495,11,13,5,0]]
-        - [[170,457,20,37,11,0],[197,496,11,14,5,0]]
-        - [[170,457,20,37,11,0],[210,496,11,13,5,0]]
+      elements:
+        - quads: [[170,457,20,37,11,0],[173,495,11,13,5,0]]
+        - quads: [[170,457,20,37,11,0],[197,496,11,14,5,0]]
+        - quads: [[170,457,20,37,11,0],[210,496,11,13,5,0]]
     talk_s:
-      frames:
-        - [[193,459,23,35,11,0], [186,495,9,14,5,-32]]
-        - [[193,459,23,35,11,0], [223,496,9,15,5,-32]]
-        - [[193,459,23,35,11,0], [234,496,9,13,5,-32]]
-        - [[193,459,23,35,11,0], [223,496,9,15,5,-32]]
+      elements:
+        - quads: [[193,459,23,35,11,0], [186,495,9,14,5,-32]]
+        - quads: [[193,459,23,35,11,0], [223,496,9,15,5,-32]]
+        - quads: [[193,459,23,35,11,0], [234,496,9,13,5,-32]]
+        - quads: [[193,459,23,35,11,0], [223,496,9,15,5,-32]]
 plank:
   sheet: "gfx/sprites/sprites1.png"
   type: "asset.sprite"
@@ -136,11 +136,11 @@ door_village_scummbar:
   type: "asset.sprite"
   animations:
     open:
-      frames:
-        - [3,126,31,52]
+      elements:
+        - quads: [[3,126,31,52]]
     closed:
-      frames:
-        - [35,126,31,52]
+      elements:
+        - quads: [[35,126,31,52]]
 door_scummbar_village:
   sheet: "gfx/sprites/sprites1.png"
   type: "asset.sprite"
