--- a/games/ffight/rooms/test2.yaml
+++ b/games/ffight/rooms/test2.yaml
@@ -17,5 +17,8 @@
     - factory: [player]
       d: [ [5, 5, -10] ]
     - factory: [ aabb ]
-      d: [[0,-100,-60,1296,100,60], [0, 0, -60,1296,100,1], [0,0,0,1296,1000,1]]
+      d: [[0,-100,-60,300,100,60], [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
+    - factory: [prism, {'poly': [0,60,100,0,200,0,100,60], 'height': 20}]
+      d: [[180, 0, 0]]
+      #d: [ [0,0,0,10,1,2,0,0,-1], [15,-9,-8,10,10,10]]
       #d: [ [0,0,0,10,1,2,0,0,-1], [15,-9,-8,10,10,10]]
