--- a/games/ffight/rooms/test2.yaml
+++ b/games/ffight/rooms/test2.yaml
@@ -17,8 +17,12 @@
     - factory: [player]
       d: [ [5, 5, -10] ]
     - factory: [ aabb ]
-      d: [[0,-100,-60,300,100,60]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
-    - factory: [prism, {'poly': [0,60,100,0,200,0,100,60], 'height': 20}]
-      d: [[180, 0, 0]]
+      d: [[0,-100,-67.88,1200,100,67.88]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
+    - factory: [ prism, {'poly': [0,0,347,0,361,19.8,14,19.8], 'height': 112}]
+      d: [[474, 0, -67.88]]
+    #- factory: [prism, {'poly': [0,60,100,0,200,0,100,60], 'height': 20}]
+    #  d: [[180, 0, 0]]
+    - factory: [bg]
+      d: [[0, 0, -100,'assets/dd1.png']]
       #d: [ [0,0,0,10,1,2,0,0,-1], [15,-9,-8,10,10,10]]
       #d: [ [0,0,0,10,1,2,0,0,-1], [15,-9,-8,10,10,10]]
