adding dynamic follo

--- a/games/ffight/rooms/test2.yaml
+++ b/games/ffight/rooms/test2.yaml
@@ -6,8 +6,8 @@
   height: 224
   scale: 1.0
   time: 300
-  world_width: 700.0
-  world_height: 512
+  world_width: 5216
+  world_height: 736
   max_enemies: 1
   prob_new_enemy: 0.1
   enemies_to_kill: 10
@@ -15,14 +15,17 @@
   items:
 
     - factory: [player]
-      d: [ [5, 5, -10] ]
+      d: [ [5, 260, -10] ]
     - factory: [ aabb ]
-      d: [[0,-100,-67.88,1200,100,67.88]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
-    - factory: [ prism, {'poly': [0,0,347,0,361,19.8,14,19.8], 'height': 112}]
-      d: [[474, 0, -67.88]]
-    #- factory: [prism, {'poly': [0,60,100,0,200,0,100,60], 'height': 20}]
-    #  d: [[180, 0, 0]]
+      d: [[0,254,-90.51,1200,2,90.51]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
+
+    #- factory: [ prism, {'poly': [0,0,347,0,361,19.8,14,19.8], 'height': 112}]
+    #  d: [[474, 0, -67.88]]
+    - factory: [prism, {'poly': [0,0,352,0,360,12.72,376,12.72,384,22.62,15,22.62], 'height': 114}]
+      d: [[482, 254, -90.51]]
+    - factory: [ aabb ]
+      d: [[497, 0, -115.13,200,1000,2]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
     - factory: [bg]
-      d: [[0, 0, -100,'assets/dd1.png']]
+      d: [[0, 0, -1000,'assets/ddragon1.png']]
       #d: [ [0,0,0,10,1,2,0,0,-1], [15,-9,-8,10,10,10]]
       #d: [ [0,0,0,10,1,2,0,0,-1], [15,-9,-8,10,10,10]]
