--- a/games/ffight/rooms/test2.yaml
+++ b/games/ffight/rooms/test2.yaml
@@ -16,15 +16,19 @@
 
     - factory: [player]
       d: [ [5, 260, -10] ]
-    - factory: [ aabb ]
-      d: [[0,254,-90.51,1200,2,90.51]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
+    #- factory: [ aabb ]
+    #  d: [[0,254,-90.51,1200,2,90.51]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
+    - factory: [prism, {'poly': [0, 256,1548,256,1472,332,1260,332,1232,368,994,368,960,320,0,320], 'depth': 0, 'walls': []}]
+      d: [[0,0,0]]
+##    - factory: [prism, {'poly': [0, 0, 100, 0, 100, 90.51, 0, 90.51], 'height': 2, 'walls': [0,2,3]}]
+##      d: [[0, 254,0]]
 
     #- factory: [ prism, {'poly': [0,0,347,0,361,19.8,14,19.8], 'height': 112}]
     #  d: [[474, 0, -67.88]]
-    - factory: [prism, {'poly': [0,0,352,0,360,12.72,376,12.72,384,22.62,15,22.62], 'height': 114}]
-      d: [[482, 254, -90.51]]
-    - factory: [ aabb ]
-      d: [[497, 0, -115.13,200,1000,2]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
+#    - factory: [prism, {'poly': [0,0,352,0,360,12.72,376,12.72,384,22.62,15,22.62], 'height': 114, 'walls': [0]}]
+#      d: [[482, 254, -90.51]]
+#    - factory: [ aabb ]
+#      d: [[497, 0, -115.13,200,1000,2]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
     - factory: [bg]
       d: [[0, 0, -1000,'assets/ddragon1.png']]
       #d: [ [0,0,0,10,1,2,0,0,-1], [15,-9,-8,10,10,10]]
