--- a/games/ffight/rooms/test2.yaml
+++ b/games/ffight/rooms/test2.yaml
@@ -18,8 +18,13 @@
       d: [ [5, 260, -10] ]
     #- factory: [ aabb ]
     #  d: [[0,254,-90.51,1200,2,90.51]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
-    - factory: [prism, {'poly': [0, 256,1548,256,1472,332,1260,332,1232,368,994,368,960,320,0,320], 'depth': 0, 'walls': []}]
+    - factory: [prism, {'poly': [0, 256,1548,256,1472,332,1312,332,1260,332,1232,360,984,360,960,336,863,336,855,328,840,328,832,320,483,320,0,320], 'depth': 0,
+                        'walls': [0,3,4,5,6,7,12,13]}]
       d: [[0,0,0]]
+    - factory: [prism, {'poly': [482, 304, 832, 304, 840, 296, 855, 296, 863, 288, 498, 288], 'fy': 736, 'depth': 63.99, 'height': 113,
+                        'walls': [4,5]}]
+      d: [[0,0,0]]
+
 ##    - factory: [prism, {'poly': [0, 0, 100, 0, 100, 90.51, 0, 90.51], 'height': 2, 'walls': [0,2,3]}]
 ##      d: [[0, 254,0]]
 
