adding foe chase

--- a/games/ffight/rooms/test2.yaml
+++ b/games/ffight/rooms/test2.yaml
@@ -2,8 +2,8 @@
   type: 3d
   id: 'test'
   label: 'test'
-  width: 384
-  height: 224
+  width: 256
+  height: 240
   scale: 1.0
   time: 300
   world_width: 5216
@@ -15,15 +15,23 @@
   items:
 
     - factory: [player]
-      d: [ [5, 260, -10] ]
+      d: [ [50, 257, -10] ]
+    - factory: [npc, {'model': 'jeff/sprite/main', 'speed': 50}]
+      d: [ [60, 287, -10]]
     #- factory: [ aabb ]
     #  d: [[0,254,-90.51,1200,2,90.51]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
-    - factory: [prism, {'poly': [0, 256,1548,256,1472,332,1312,332,1260,332,1232,360,984,360,960,336,863,336,855,328,840,328,832,320,483,320,0,320], 'depth': 0,
-                        'walls': [0,3,4,5,6,7,12,13]}]
+    - factory: [walk_area, {'poly': [0, 480, 1548, 480, 1472, 404, 1312, 404,1260, 404,1232, 376,984,376,960,400,863,400,855,408,840,408,832,416,483,416,0,416],
+                            'depth': 0, 'fy': 736, 'walls': [0,3,4,5,6,7,12,13]}]
       d: [[0,0,0]]
-    - factory: [prism, {'poly': [482, 304, 832, 304, 840, 296, 855, 296, 863, 288, 498, 288], 'fy': 736, 'depth': 63.99, 'height': 113,
+    - factory: [walk_area, {'poly': [482, 304, 832, 304, 840, 296, 855, 296, 863, 288, 498, 288], 'fy': 736, 'depth': 64, 'height': 113,
                         'walls': [4,5]}]
       d: [[0,0,0]]
+    - factory: [walk_area, {'poly': [2048, 608, 4072,608,3152,526,2750,526,2742,512,2256,512,2222,480,2048,480],
+                            'depth': 0, 'fy': 736, 'walls': [0,2,3,4,5,6,7]}]
+      d: [[0,0,0]]
+
+    - factory: [hotspot, {'y_min': 257, 'y_min_goto': [0, 522, 420], 'y_max': 352, 'y_max_goto': [1, 530, 299]}]
+      d: [[512, 320, 64, 20,115,2]]
 
 ##    - factory: [prism, {'poly': [0, 0, 100, 0, 100, 90.51, 0, 90.51], 'height': 2, 'walls': [0,2,3]}]
 ##      d: [[0, 254,0]]
