--- a/games/ffight/assets/jeff/sprite.yaml
+++ b/games/ffight/assets/jeff/sprite.yaml
@@ -1,43 +1,43 @@
 ---
 main:
-  sheet: 'assets/billylee/billylee.png'
+  sheet: 'assets/jeff/jeff.png'
   type: 'asset.boxed'
   animations:
     idle:
       loop: True
       loop_frame: 0
-      box: 0
       elements:
         -
           ticks: 1
-          quads: [[16,16,20,63,13,0]]
+          quads: [[8,44,24,63,13,0]]
+          box: 0
     idle_up:
       loop: True
       loop_frame: 0
-      box: 0
       elements:
         -
           ticks: 4
-          quads: [[158,98,23,60,12,0]]
+          quads: [[8,44,24,63,13,0]]
+          box: 0
     walk:
       loop: True
       loop_frame: 0
       elements:
         -
           ticks: 4
-          quads: [[16,95,20,63,13,0]]
+          quads: [[72,44,24,63,13,0]]
           box: 0
         -
           ticks: 4
-          quads: [[44,96,24,62,13,0]]
+          quads: [[104,45,18,62,11,0]]
           box: 0
         -
           ticks: 3
-          quads: [[76, 95, 24, 63, 13, 0]]
+          quads: [[130, 44, 20, 63, 13, 0]]
           box: 0
         -
           ticks: 4
-          quads: [[108,96,18,62,11,0]]
+          quads: [[158,45,24,62,13,0]]
           box: 0
     walk_up:
       loop: True
@@ -45,19 +45,19 @@ main:
       elements:
         -
           ticks: 4
-          quads: [[158,98,23,60,12,0]]
+          quads: [[222,47,23,60,12,0]]
           box: 0
         -
           ticks: 4
-          quads: [[189,97,26,61,13,0]]
+          quads: [[253,46,26,61,13,0]]
           box: 0
         -
           ticks: 3
-          quads: [[223,97,23,61,13,0]]
+          quads: [[287,46,26,61,13,0]]
           box: 0
         -
           ticks: 4
-          quads: [[257,98,22,60,11,0]]
+          quads: [[321,47,22,60,11,0]]
           box: 0
 
     jump_up:
@@ -66,11 +66,11 @@ main:
       elements:
         -
           ticks: 2
-          quads: [[16,435,28,64,18,0]]
+          quads: [[8,314,28,64,18,0]]
           box: 3
         -
           ticks: 10
-          quads: [[52,460,37,39,17,0]]
+          quads: [[44,338,37,40,17,0]]
           box: 3
     jump_down:
       loop: False
@@ -78,28 +78,12 @@ main:
       elements:
         -
           ticks: 10
-          quads: [[52,460,37,39,17,0]]
+          quads: [[44,338,37,40,17,0]]
           box: 3
-    climb:
-      loop: True
-      box: 0
-      elements:
-        -
-          ticks: 10
-          quads: [[16,174,22,62,10,0]]
-        -
-          ticks: 10
-          quads: [[46,175,24,61,12,0]]
-        -
-          ticks: 10
-          quads: [[78,174,24,62,14,0]]
-        -
-          ticks: 10
-          quads: [[110,175,21,61,11,0]]
 
 
   boxes:
-    - [-11,0,4,60]
+    - [-21, -1, 16, 79, -5, 74, 9, 89]
     - [-21, -1, 23, 57]
     - [-18, -1, 19, 79, -2, 74, 12, 89]
     - [-16, -1, 34, 92]
