--- a/games/ffight/assets/billylee/sprite.yaml
+++ b/games/ffight/assets/billylee/sprite.yaml
@@ -96,21 +96,27 @@ main:
         -
           ticks: 10
           quads: [[110,175,21,61,11,0]]
-
-
+    punch:
+      box: 0
+      elements:
+        -
+          ticks: 4
+          quads: [[16,280,29,60,23,0]]
+        -
+          ticks: 4
+          quads: [[53,281,46,59,26,0]]
+        -
+          ticks: 4
+          quads: [[107,281,27,59,20,0]]
+          attack: 1
+    hit:
+      loop: false
+      box: 0
+      elements:
+        - ticks: 4
+          quads: [ [ 16,849,23,64,11,0] ]
+        - ticks: 4
+          quads: [ [71,851,28,62,16,0] ]
   boxes:
     - [-11,0,4,60]
-    - [-21, -1, 23, 57]
-    - [-18, -1, 19, 79, -2, 74, 12, 89]
-    - [-16, -1, 34, 92]
-    - [-13, -2, 42, 69, 27, 67, 41, 79]
-    - [29, 33, 89, 59]
-    - [-10, -2, 57, 71, 49, 33, 89, 59]
-    - [-13, -2, 42, 69, 27, 67, 41, 79]
-    - [-13, -2, 50, 65]
-    - [21, 30, 64, 85]
-    - [-10, -3, 48, 78]
-    - [21, 30, 64, 107]
-    - [-9, -1, 42, 107]
-    - [-10, -3, 48, 78]
-    - [-21, -1, 16, 93]
+    - [10,44,22,52]
