--- a/games/ffight/rooms/test2.yaml
+++ b/games/ffight/rooms/test2.yaml
@@ -16,8 +16,8 @@
 
     - factory: [player]
       d: [ [50, 257, -10] ]
-    - factory: [npc, {'model': 'jeff/sprite/main', 'speed': 50, 'energy': 50}]
-      d: [ [60, 287, -10]]
+    #- factory: [npc]
+    #  d: [ [290, 287, -10, 'jeff']]
     #- factory: [ aabb ]
     #  d: [[0,254,-90.51,1200,2,90.51]]#, [0, 0, -60,300,100,1], [0,0,0,300,1000,1]]
     - factory: [walk_area, {'poly': [0, 480, 1548, 480, 1472, 404, 1312, 404,1260, 404,1232, 376,984,376,960,400,863,400,855,408,840,408,832,416,483,416,0,416],
@@ -30,8 +30,10 @@
                             'depth': 0, 'fy': 736, 'walls': [0,2,3,4,5,6,7]}]
       d: [[0,0,0]]
 
-    - factory: [hotspot, {'y_min': 257, 'y_min_goto': [0, 522, 420], 'y_max': 352, 'y_max_goto': [1, 530, 299]}]
+    - factory: [ladder, {'y_min': 257, 'y_min_goto': [0, 522, 420], 'y_max': 352, 'y_max_goto': [1, 530, 299]}]
       d: [[512, 320, 64, 20,115,2]]
+    - factory: [spawn]
+      d: [[120, 319, 64, 5,10, 64, [[150,287, -10, 'jeff'], [190,287, -20, 'jeff']]]]
 
 ##    - factory: [prism, {'poly': [0, 0, 100, 0, 100, 90.51, 0, 90.51], 'height': 2, 'walls': [0,2,3]}]
 ##      d: [[0, 254,0]]
