--- a/games/monkey/text/fra/text.yaml
+++ b/games/monkey/text/fra/text.yaml
@@ -24,11 +24,11 @@ objects:
   stairs: stairs
   cliffside : bord de falaise
   archway: arche
-  path: path
+  path: sentier
   poster: affiche
   door: porte
   lookout: lookout
-  clearing: clearing
+  clearing: clairière
   pirate: pirate
   pirates: pirates
   fireplace: cheminée
@@ -51,6 +51,7 @@ objects:
   potostew: marmite de ragout
   stewed_meat: viande en sauce
   stewed_meat_2: ragout de viande
+  circus_tent: chapiteau
 dialogues:
   mancomb:
     1: "Bien le bonjour, étranger."
@@ -119,6 +120,110 @@ dialogues:
     64: "Whatever you say."
     65: "Just watch out for those guard dogs!"
     66: "Uh-oh, it looks like my grog is going flat, so you'll have to excuse me."
+  fettuccini:
+    1: "Je veux bien rentrer dans le canon, mais la poudre à canon me fait éternuer."
+    2: "Malheureusement, je ne peux pais le faire. Je me suis fait mail à la man en domptant le lion."
+    3: "Tu ne peux pas comparer une petite égratignure avec mes allergies chroniques. Allex monte dans ce canon."
+    4: "Tu mens tu n'as aucune allergie, espèce de comédien. MONTE dans le canon."
+    5: "Non, TU y vas!"
+    6: "Lâche!"
+    7: "Espèce de raté!"
+    8: "Brute!"
+    9: "Snob!"
+    10: "Espèce de renard!"
+    11: "Doryphore!"
+    12: "Miscreant!"
+    13: "Toady!"
+    14: "Ne'er-do-well!"
+    15: "Scofflaw!"
+    16: "Mullet-head!"
+    17: "Millet-head!"
+    18: "Pencil-head!"
+    19: "Half-head!"
+    20: "Cheese-head!"
+    21: "Harpy!"
+    22: "What?"
+    23: "Just get in the cannon."
+    24: "Your mother wears combat slippers!"
+    25: "Leave our mother out of it! Get in the cannon!"
+    26: "You're a chicken!"
+    27: "You're a dead chicken!"
+    28: "Well, you're a dead chicken with a pulley in the middle!"
+    29: "...hum..."
+    30: "Où sont les toilettes?"
+    31: "J'ai de beaux blousons à vendre."
+    32: "Je peux emprunter un trampoline?"
+    33: "Vous portez des costumes ridicules les gars?"
+    34: "Ah, tiens donc mon ami...j'ai une offre à te faire!"
+    35: "--Ca n'arrive qu'une fois dans une vie--"
+    36: "--To perform an amazing feat--"
+    37: "--A death-defying feat--"
+    38: "--Well, not so death-defying, really--"
+    39: "--A dangerous feat--"
+    40: "--No, not dangerous at all--"
+    41: "--An easy feat--"
+    42: "--But exciting!--"
+    43: "--With the Amazing--"
+    44: "--Adventurous, Acrobatic--"
+    45: "--And Exceedingly Well-Known--"
+    46: "--Fabulous, Flying--"
+    47: "--Fettuccini Brothers!"
+    48: "That's us."
+    49: "My brother Alfredo..."
+    50: "...and my brother Bill."
+    51: "Sound good?"
+    52: "Good."
+    53: "It's very simple, really."
+    54: "See that cannon over there?"
+    55: "All you have to do--"
+    56: "--Is get in the cannon--"
+    57: "--And we'll shoot you out of it--"
+    58: "--Across the room--"
+    59: "--Quite safe, actually--"
+    60: "--So, what do you say?"
+    61: "OK, I'll do it."
+    62: "How much will you give me?"
+    63: "Forget it!"
+    64: "How about 478 pieces of eight?"
+    65: "OK, sounds good."
+    66: "No way!"
+    67: "Hello again."
+    68: "Ready to do the cannon trick?"
+    69: "We'll pay you 478 pieces of eight."
+    70: "Have you got a helmet?"
+    71: "Er... no, I don't have a helmet. Will I need one?"
+    72: "Of course I have a helmet. What sort of idiot do you take me for?"
+    73: "No helmet?"
+    74: "Oh, you've got to have a helmet--"
+    75: "--Can't do the cannon trick without a helmet--"
+    76: "--Nosiree!"
+    77: "Go get a helmet, and then we can do the trick."
+    78: "Well, let's have it."
+    79: "We want to be sure--"
+    80: "--That is's safe--"
+    81: "--Wouldn't want you hurt--"
+    82: "Ah, that will work as a helmet!"
+    83: "Now we can do the trick."
+    84: "Step right over here, son."
+    85: "Now, put on yout helmet--"
+    86: "--and get in the cannon--"
+    87: "--and we'll take care of the rest."
+    88: "ECHO"
+    89: "It works!"
+    90: "I'm so relieved!"
+    91: "Hey..."
+    92: "Are you OK?"
+    93: "Where's my helmet?"
+    94: "I'm Bobbin. Are you my mother?"
+    95: "He's all right!"
+    96: "Hooray! We are spared an embarassing and financially debilitating lawsuit!"
+    97: "Here's your money, sir."
+    98: "Just recompense for aiding us."
+    99: "We just need to change the aim a bit."
+    100: "I'll try it next!"
+    101: "No, I'LL do it next!"
+    102: "No, me!"
+    103: "No, ME!"
   citizen:
     1: "Excuse me, but do you have a cousin named Sven?"
     2: "What?"
