--- a/games/monkey/assets/01.yaml
+++ b/games/monkey/assets/01.yaml
@@ -109,6 +109,72 @@ guybrush:
     push_plank:
       elements:
         - quads: [[57, 150, 21, 47, 10, 0]]
+    circus_cutscene_1:
+      loop: False
+      elements:
+        - quads: [[1, 199, 26, 47, 15, 0]]
+        - quads: [[30, 199, 26, 47, 15, 0]]
+        - quads: [[59, 199, 26, 47, 15, 0]]
+        - quads: [[88, 199, 36, 48, 15, 0]]
+    circus_cutscene_2:
+      loop: False
+      elements:
+        - quads: [[1, 199, 26, 47, 15, 0]]
+        - quads: [[30, 199, 26, 47, 15, 0]]
+        - quads: [[59, 199, 26, 47, 15, 0]]
+        - quads: [[88, 199, 36, 48, 15, 0]]
+        - quads: [[176, 193, 21, 54, 7, 2]]
+        - quads: [[200, 200, 18, 47, 7, 2]]
+        - quads: [[222, 198, 26, 49, 7, 2]]
+        - quads: [[1,249,27,49,7,1]]
+        - quads: [[31,248,23,31,5,-6]]
+        - quads: [[57,248,19,46,5,-6]]
+        - quads: [[80,249,20,41,6,-5]]
+        - quads: [[104,249,15,29,0,-13]]
+        - quads: [[124,249,19,20,4,-16]]
+        - quads: [[147,249,23,20,4,-22]]
+        - quads: [[172,252,21,13,4,-22]]
+circus_explosion:
+  sheet: "gfx/sprites/sprites1.png"
+  type: 'asset.sprite'
+  animations:
+    default:
+      loop: False
+      elements:
+        - quads: [[45,324,36,36,-244,-43]]
+        - quads: [[87,300,48,41,-244,-40]]
+        - quads: [[89,342,44,46,-244,-38]]
+        - quads: [[2,354,46,50,-244,-40], [51,362,32,29,-201,72]]
+        - quads: [[1,406,51,48,-244,-36], [55,394,33,20,-200,-78]]
+        - quads: [[2,457,48,43,-244,-35]]
+        - quads: [[54,417,44,46,-244,-34]]
+flying_guybrush:
+  sheet: "gfx/sprites/sprites1.png"
+  type: 'asset.sprite'
+  animations:
+    default:
+      loop: False
+      elements:
+        - quads: [[53,467,20,22,-213,-75]]
+        - quads: [[74,467,26,16,-190,-89]]
+        - quads: [[74,484,26,27,-169,-96]]
+        - quads: [[103,464,37,24,-148,-100]]
+        - quads: [[103,489,31,22,-133,98]]
+        - quads: [[143,487,25,24,-111,-92]]
+        - quads: [[144,463,22,22,-93,-89]]
+        - quads: [[144,463,22,22,-93,-84]]
+        - quads: [[144,463,22,22,-93,-82]]
+        - quads: [[144,463,22,22,-93,-70]]
+        - quads: [[144,463,22,22,-93,-65]]
+        - quads: [[144,463,22,22,-93,-60]]
+        - quads: [[144,463,22,22,-93,-55]]
+        - quads: [[144,463,22,22,-93,-50]]
+        - quads: [[144,463,22,22,-93,-45]]
+        - quads: [[144,463,22,22,-93,-40]]
+        - quads: [[144,463,22,22,-93,-35]]
+        - quads: [[144,463,22,22,-93,-29]]
+
+
 lookout:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
@@ -498,6 +564,9 @@ fettuccini_alfredo:
         - quads: [[167, 278, 22, 38, 13, 0], [194, 323, 10, 13, 6, -33]]
         - quads: [[167, 278, 22, 38, 13, 0], [193, 337, 11, 12, 6, -33]]
         - quads: [[167, 278, 22, 38, 13, 0], [194, 350, 9, 12, 6, -33]]
+    talk_n:
+      elements:
+        - quads: [[ 191, 271, 28, 45, 14, 0]]
 
 citizen:
   sheet: 'gfx/sprites/sprites1.png'
