--- a/games/monkey/text/eng/text.yaml
+++ b/games/monkey/text/eng/text.yaml
@@ -406,7 +406,7 @@ dialogues:
     82: "Ah, that will work as a helmet!"
     83: "Now we can do the trick."
     84: "Step right over here, son."
-    85: "Now, put on yout helmet--"
+    85: "Now, put on your helmet--"
     86: "--and get in the cannon--"
     87: "--and we'll take care of the rest."
     88: "ECHO"
