--- a/games/monkey/dialogues/dialogues.yaml
+++ b/games/monkey/dialogues/dialogues.yaml
@@ -48,17 +48,17 @@ fettuccini:
       activate: [8, 9]
       deactivate: [4, 5, 6]
       scr:
-        - [ 0, 0, say, player, 61]
-        - [ 1, 0, say, alfredo, 69]
-        - [ 2, 1, say, alfredo, 70]
-        - [ 3, 0, set, '@circus_status', 2]
+        - [0, say, player, 61]
+        - [[0], set, '@circus_status', 2]
+        - [say, alfredo, 69]
+        - [say, alfredo, 70]
     5:
       text: 62
       persist: true
       next: m2
       scr:
-        - [ 0, 0, say, player, 62]
-        - [ 1, 0, say, alfredo, 64]
+        - [say, player, 62]
+        - [say, alfredo, 64]
     6:
       text: 63
       script: fettuccini_exit
@@ -68,13 +68,13 @@ fettuccini:
       active: false
       persist: true
       scr:
-        - [0, 0, say, player, 71]
-        - [1, 0, say, bill, 73]
-        - [2, 1, say, alfredo, 74]
-        - [3, 2, say, bill, 75]
-        - [4, 3, say, alfredo, 76]
-        - [5, 4, say, bill, 77]
-        - [6, 5, goto, clearing, '@pos/circus_tent', s]
+        - [say, player, 71]
+        - [say, bill, 73]
+        - [say, alfredo, 74]
+        - [say, bill, 75]
+        - [say, alfredo, 76]
+        - [say, bill, 77]
+        - [goto, clearing, '@pos/circus_tent', s]
     9:
       text: 72
       active: false
@@ -85,7 +85,7 @@ fettuccini:
         #- [2, 1, say, bill, 79]
         #- [3, 2, say, alfredo, 80]
         #- [4, 3, say, bill, 81]
-        - [0, 0, say, alfredo, 76]
+        - [say, alfredo, 76]
 
     10:
       text: 65
@@ -94,23 +94,26 @@ fettuccini:
       deactivate: [4, 5, 6]
       next: m1
       scr:
-        - [ 0, 0, say, player, 65 ]
-        - [ 1, 0, say, alfredo, 70 ]
-        - [ 2, 1, set, '@circus_status', 2 ]
+        - [say, player, 65 ]
+        - [say, alfredo, 70 ]
+        - [set, '@circus_status', 2 ]
     11:
       text: 66
       persist: true
       scr:
-        - [ 0, 0, say, player, 66 ]
-        - [ 6, 5, goto, clearing, '@pos/circus_tent', s ]
+        - [say, player, 66 ]
+        - [goto, clearing, '@pos/circus_tent', s ]
     12:
       text: 93
       scr:
-        - [0, 0, goto, clearing, '@pos/circus_tent', s]
+        - [say, player, 93 ]
+        - [say, alfredo, 95 ]
+        - [goto, clearing, '@pos/circus_tent', s]
     13:
       text: 94
       scr:
-        - [0, 0, goto, clearing, '@pos/circus_tent', s]
+        - [say, player, 94 ]
+        - [goto, clearing, '@pos/circus_tent', s]
 loom:
   text_set: '$dialogues/loom'
   on_exit: on_exit_loom
@@ -348,57 +351,56 @@ ilp:
     0:
       text: 2
       scr:
-        - [0, 0, say, player, 2]
-        - [1, 0, say, important_looking_pirate_1, 5]
+        - [say, player, 2]
+        - [say, important_looking_pirate_1, 5]
     1:
       text: 3
       next: info
       scr:
-        - [0, 0, say, player, 3]
-        - [100, 0, set, '@pirates_know_guybrush', True]
-        - [101, 0, set_dialogue_root, ilp, info]
-        - [1, 0, say, important_looking_pirate_1, 6]
-#        - [2, 1, say, important_looking_pirate_2, 7]
-#        - [3, 2, say, important_looking_pirate_3, 8]
-#        - [4, 3, say, important_looking_pirate_1, 9]
-#        - [5, 4, say, important_looking_pirate_3, 10]
-#        - [6, 5, say, important_looking_pirate_1, 11, 12]
-#        - [7, 6, say, player, 13]
-#        - [8, 7, say, important_looking_pirate_1, 14, 15]
-#        - [9, 8, say, important_looking_pirate_3, 16]
-#        - [10, 9, say, important_looking_pirate_1, 17]
-#        - [11, 9, say, important_looking_pirate_2, 17]
-#        - [12, 9, say, important_looking_pirate_3, 17]
-#        - [13, [10, 11, 12], say, player, 18, 19]
-#        - [14, 13, say, important_looking_pirate_2, 20]
-#        - [15, 14, say, important_looking_pirate_1, 21]
-#        - [16, 15, say, important_looking_pirate_2, 22]
-#        - [17, 16, say, important_looking_pirate_3, 23]
-#        - [18, 17, say, important_looking_pirate_2, 24]
-#        - [19, 18, say, important_looking_pirate_3, 25]
-#        - [20, 19, say, important_looking_pirate_2, 26, 27, 28, 29]
-#        - [21, 20, say, important_looking_pirate_1, 30]
-#        - [22, 21, say, important_looking_pirate_1, 31]
-#        - [23, 21, say, important_looking_pirate_2, 31]
-#        - [24, 21, say, important_looking_pirate_3, 31]
-
+        - [0, say, player, 3]
+        - [[0], set, '@pirates_know_guybrush', True]
+        - [[0], set_dialogue_root, ilp, info]
+        - [[0], say, important_looking_pirate_1, 6]
+        - [say, important_looking_pirate_2, 7]
+        - [say, important_looking_pirate_3, 8]
+        - [say, important_looking_pirate_1, 9]
+        - [say, important_looking_pirate_3, 10]
+        - [say, important_looking_pirate_1, 11, 12]
+        - [say, player, 13]
+        - [say, important_looking_pirate_1, 14, 15]
+        - [1, say, important_looking_pirate_3, 16]
+        - [2, [1], say, important_looking_pirate_1, 17]
+        - [3, [1], say, important_looking_pirate_2, 17]
+        - [4, [1], say, important_looking_pirate_3, 17]
+        - [[2, 3, 4], say, player, 18, 19]
+        - [say, important_looking_pirate_2, 20]
+        - [say, important_looking_pirate_1, 21]
+        - [say, important_looking_pirate_2, 22]
+        - [say, important_looking_pirate_3, 23]
+        - [say, important_looking_pirate_2, 24]
+        - [say, important_looking_pirate_3, 25]
+        - [say, important_looking_pirate_2, 26, 27, 28, 29]
+        - [5, say, important_looking_pirate_1, 30]
+        - [[5], say, important_looking_pirate_1, 31]
+        - [[5], say, important_looking_pirate_2, 31]
+        - [[5], say, important_looking_pirate_3, 31]
     2:
       text: 4
       scr:
-        - [0, 0, say, player, 4]
-        - [1, 0, say, important_looking_pirate_1, 5]
+        - [say, player, 4]
+        - [say, important_looking_pirate_1, 5]
     3:
       text: 32
       next: info
       deactivate: [3]
       activate: [9]
       scr:
-        - [0, 0, say, player, 32]
-        - [1, 0, say, important_looking_pirate_1, 42, 43, 44, 45, 46]
-        - [2, 1, say, important_looking_pirate_3, 47, 48]
-        - [3, 2, say, important_looking_pirate_1, 49]
-        - [4, 2, say, important_looking_pirate_2, 49]
-        - [5, 2, say, important_looking_pirate_3, 49]
+        - [say, player, 32]
+        - [say, important_looking_pirate_1, 42, 43, 44, 45, 46]
+        - [0, say, important_looking_pirate_3, 47, 48]
+        - [[0], say, important_looking_pirate_1, 49]
+        - [[0], say, important_looking_pirate_2, 49]
+        - [[0], say, important_looking_pirate_3, 49]
     4:
       text: 33
       order: 10
@@ -406,14 +408,14 @@ ilp:
       activate: [10]
       next: info
       scr:
-        - [0, 0, say, player, 33]
-        - [1, 0, say, important_looking_pirate_2, 52]
-        - [2, 1, say, important_looking_pirate_1, 53]
-        - [3, 2, say, important_looking_pirate_3, 54]
-        - [4, 3, say, important_looking_pirate_2, 55]
-        - [5, 4, say, important_looking_pirate_1, 56]
-        - [6, 5, say, important_looking_pirate_3, 57]
-        - [7, 6, say, important_looking_pirate_1, 58, 59]
+        - [say, player, 33]
+        - [say, important_looking_pirate_2, 52]
+        - [say, important_looking_pirate_1, 53]
+        - [say, important_looking_pirate_3, 54]
+        - [say, important_looking_pirate_2, 55]
+        - [say, important_looking_pirate_1, 56]
+        - [say, important_looking_pirate_3, 57]
+        - [say, important_looking_pirate_1, 58, 59]
     5:
       text: 34
       order: 20
@@ -421,51 +423,51 @@ ilp:
       activate: [11]
       next: info
       scr:
-        - [0, 0, say, player, 34]
-        - [1, 0, say, important_looking_pirate_3, 61]
-        - [2, 1, say, important_looking_pirate_1, 62]
-        - [3, 2, say, player, 63]
-        - [4, 3, say, important_looking_pirate_1, 64]
-        - [5, 4, say, important_looking_pirate_2, 65, 66]
-        - [6, 5, say, important_looking_pirate_1, 49]
-        - [7, 5, say, important_looking_pirate_2, 49]
-        - [8, 5, say, important_looking_pirate_3, 49]
+        - [say, player, 34]
+        - [say, important_looking_pirate_3, 61]
+        - [say, important_looking_pirate_1, 62]
+        - [say, player, 63]
+        - [say, important_looking_pirate_1, 64]
+        - [0, say, important_looking_pirate_2, 65, 66]
+        - [[0], say, important_looking_pirate_1, 49]
+        - [[0], say, important_looking_pirate_2, 49]
+        - [[0], say, important_looking_pirate_3, 49]
     6:
       text: 35
       order: 30
       next: info
       scr:
-        - [0, 0, say, player, 35]
-        - [1, 0, say, important_looking_pirate_1, 68]
+        - [say, player, 35]
+        - [say, important_looking_pirate_1, 68]
     7:
       text: 36
       order: 40
       scr:
-        - [0, 0, say, player, 36]
-        - [1, 0, say, important_looking_pirate_2, 69]
-        - [2, 1, say, important_looking_pirate_1, 70]
-        - [3, 2, say, important_looking_pirate_2, 71]
-        - [4, 3, say, important_looking_pirate_3, 72]
-        - [5, 4, say, important_looking_pirate_1, 73]
-        - [6, 5, say, important_looking_pirate_2, 74]
-        - [7, 6, say, important_looking_pirate_3, 75]
-        - [8, 7, say, important_looking_pirate_1, 76]
-        - [9, 8, say, important_looking_pirate_2, 77]
-        - [10, 9, say, important_looking_pirate_3, 78]
-        - [11, 10, say, important_looking_pirate_1, 79]
-        - [12, 11, say, important_looking_pirate_2, 80, 81]
-        - [13, 12, say, important_looking_pirate_1, 82]
-        - [14, 13, say, important_looking_pirate_1, 49]
-        - [15, 13, say, important_looking_pirate_2, 49]
-        - [16, 13, say, important_looking_pirate_3, 49]
+        - [say, player, 36]
+        - [say, important_looking_pirate_2, 69]
+        - [say, important_looking_pirate_1, 70]
+        - [say, important_looking_pirate_2, 71]
+        - [say, important_looking_pirate_3, 72]
+        - [say, important_looking_pirate_1, 73]
+        - [say, important_looking_pirate_2, 74]
+        - [say, important_looking_pirate_3, 75]
+        - [say, important_looking_pirate_1, 76]
+        - [say, important_looking_pirate_2, 77]
+        - [say, important_looking_pirate_3, 78]
+        - [say, important_looking_pirate_1, 79]
+        - [say, important_looking_pirate_2, 80, 81]
+        - [0, say, important_looking_pirate_1, 82]
+        - [[0], say, important_looking_pirate_1, 49]
+        - [[0], say, important_looking_pirate_2, 49]
+        - [[0], say, important_looking_pirate_3, 49]
     8:
       text: 37
       order: 100
       persist: True
       scr:
-        - [0, 0, say, player, 37]
-        - [1, 0, say, important_looking_pirate_1, 38]
-        - [2, 1, say, important_looking_pirate_2, 39]
+        - [say, player, 37]
+        - [say, important_looking_pirate_1, 38]
+        - [say, important_looking_pirate_2, 39]
     9:
       text: 50
       order: 0
@@ -473,9 +475,9 @@ ilp:
       next: info
       persist: True
       scr:
-        - [0, 0, say, player, 50]
-        - [1, 0, say, important_looking_pirate_1, 42, 43, 44]
-        - [2, 1, say, important_looking_pirate_3, 51]
+        - [say, player, 50]
+        - [say, important_looking_pirate_1, 42, 43, 44]
+        - [say, important_looking_pirate_3, 51]
     10:
       text: 60
       order: 10
@@ -483,11 +485,11 @@ ilp:
       next: info
       persist: True
       scr:
-        - [0, 0, say, player, 60]
-        - [1, 0, say, important_looking_pirate_2, 55]
-        - [2, 1, say, important_looking_pirate_1, 56]
-        - [3, 2, say, important_looking_pirate_3, 57]
-        - [4, 3, say, important_looking_pirate_1, 58, 59]
+        - [say, player, 60]
+        - [say, important_looking_pirate_2, 55]
+        - [say, important_looking_pirate_1, 56]
+        - [say, important_looking_pirate_3, 57]
+        - [say, important_looking_pirate_1, 58, 59]
     11:
       text: 67
       order: 20
@@ -495,12 +497,12 @@ ilp:
       next : info
       persiste: True
       scr:
-        - [0, 0, say, player, 67]
-        - [1, 0, say, important_looking_pirate_1, 62]
-        - [2, 1, say, important_looking_pirate_2, 65, 66]
-        - [3, 2, say, important_looking_pirate_1, 49]
-        - [4, 2, say, important_looking_pirate_2, 49]
-        - [5, 2, say, important_looking_pirate_3, 49]
+        - [say, player, 67]
+        - [say, important_looking_pirate_1, 62]
+        - [0, say, important_looking_pirate_2, 65, 66]
+        - [[0], say, important_looking_pirate_1, 49]
+        - [[0], say, important_looking_pirate_2, 49]
+        - [[0], say, important_looking_pirate_3, 49]
   nodes:
     root:
       lines: [0, 1, 2]
