--- a/games/monkey/rooms/village1.yaml
+++ b/games/monkey/rooms/village1.yaml
@@ -13,6 +13,7 @@
     - factory: [bg, {'image': gfx/village1_4.png}]
       d: [[606, 0, 1]]
     - factory: [walkarea, {'id': walkarea_0, 'depth': { 'type': "func.liny", 'values': [0, 1, 144, 0]},
+        'scale': { 'type': "func.liny", 'values': [0, 0.8, 144, 0.1]},
         'nodes': [8, 71, 23, 63, 49, 49, 40, 37, 56, 24, 84, 13, 770, 13, 780, 34, 1000, 34],
         'edges': [0, 1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 7, 7, 8]}]
       d: [[0,0,0]]
