--- a/games/monkey/rooms/store.yaml
+++ b/games/monkey/rooms/store.yaml
@@ -3,9 +3,14 @@
   type: default
   width: 320
   height: 144
+  on_load: init_store
   items:
     - factory: [bg, {'image': gfx/shop.png}]
       d: [[0, 0, -1]]
+    - factory: [bg, {'image': gfx/shop2.png}]
+      d: [[117, 0, 1]]
+    - factory: [bg, {'image': gfx/shop3.png}]
+      d: [[240, 0, 1]]
     - factory: [walkarea, {'id': walkarea_0, 'depth': { 'type': "func.liny", 'values': [0, 1, 144, 0]}, 'outline':
-        [62,14,62,0,248,0,248,2,235,13,235,21,181,21,175,25,188,25,235,67,235,69,154,69,154,67,231,67,188,29,150,31,115,20,90,20]} ]
+        [62,14,62,0,248,0,248,2,235,13,235,21,181,21,175,25,188,25,235,67,235,69,154,69,154,67,231,67,188,29,150,29,115,20,90,20]} ]
       d: [[0,0,0]]
